# advent-of-python-2023

./: .gitignore  Taskfile.yml  pyproject.toml
src/: common.py  common_maths.py  test_common.py
src/day01/: part_one.py  part_two.py  test_part_one.py  test_part_two.py
src/day02/: part_one.py  part_one_and_two.py  test_part_one.py  test_part_two.py
src/day03/: part_one.py  part_one_and_two.py  test_part_one.py  test_part_two.py
src/day04/: part_one.py  part_one_and_two.py  test_part_one.py  test_part_two.py
src/day05/: part_one.py  part_one_and_two.py  test_part_one.py  test_part_two.py
src/day06/: part_one.py  part_one_and_two.py  test_part_one.py  test_part_two.py
src/day07/: part_one.py  part_one_and_two.py  test_part_one.py  test_part_two.py
src/day08/: part_one.py  part_one_and_two.py  test_part_one.py  test_part_two.py
src/day09/: part_one.py  part_one_and_two.py  test_part_one.py  test_part_two.py
src/examples/: three_lines_with_a_blank.txt
